sources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prefect-server
  namespace: prefect
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect : "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect : "true"
spec:
  ingressClassName: nginx
  rules:
  - host: prefect.privatelink.uksouth.azmk8s.io
    http:
      paths:
      - path: /
        backend:
          serviceName: prefect-server
          servicePort: 4200
  tls:
  - hosts:
    - prefect.privatelink.uksouth.azmk8s.io
    secretName: prefect.privatelink.uksouth.azmk8s.io-tls
